# cellscope

./: README.md  main.py  pyproject.toml
docs/: interview-notes.md
docs/concepts/: anndata.md  annotations.md  batch-effects.md
src/cellscope/: cli.py  io.py  validation.py
tests/: test_validation.py
