[project]
name = "bio-workflow-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "anndata>=0.12.18",
]

[dependency-groups]
dev = [
    "numpy>=2.5.0",
    "pandas>=2.3.3",
    "pytest>=9.1.1",
]

[build-system]
requires = ["uv_build>=0.11.25,<0.12"]
build-backend = "uv_build"
[tool.uv.build-backend]
module-name = "cellscope"